Add naive kubernetes codegen agent

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ langsmith = "^0.1.147"
 jupyter = "^1.1.1"
 pydantic = "^2.10.2"
 pypdf = "^5.1.0"
+kubernetes = "^31.0.0"
 
 
 [tool.poetry.group.scraper.dependencies]
