--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,13 @@ jupyter = "^1.1.1"
 pydantic = "^2.10.2"
 pypdf = "^5.1.0"
 kubernetes = "^31.0.0"
+pandas = "*"
+matplotlib = "*"
+numpy = "*"
+langchain-anthropic = "^0.3.4"
+langchain-openai = "^0.3.2"
+langchain-experimental = "^0.3.4"
+tqdm = "^4.67.1"
 
 
 [tool.poetry.group.scraper.dependencies]
