--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,12 @@
+# Workspace
+.kubeconfig*
+Dockerfile
+.docker
+.dockerignore
+data/
+logs/
+
+# Generic Python rules
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -160,5 +169,3 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
-
-.kubeconfig*
