--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Chen Xinyang <me@chenxy.tech>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.12"
 langgraph = "^0.2.53"
 langchain = "^0.3.9"
 langchain-ollama = "^0.2.0"
@@ -22,6 +22,8 @@ langchain-anthropic = "^0.3.4"
 langchain-openai = "^0.3.2"
 langchain-experimental = "^0.3.4"
 tqdm = "^4.67.1"
+vllm = "^0.7.0"
+hf-transfer = "^0.1.9"
 
 
 [tool.poetry.group.scraper.dependencies]
