--- a/llm_ran/k8s_env/manifests/scenarios/node-affinity/kustomization.yaml
+++ b/llm_ran/k8s_env/manifests/scenarios/node-affinity/kustomization.yaml
@@ -9,8 +9,5 @@ patches:
     spec:
       template:
         spec:
-          containers:
-            - name: server
-              livenessProbe:
-                grpc:
-                  port: 3551
+          nodeSelector:
+            disktype: ssd
