Added all scenarios

--- a/llm_ran/k8s_env/manifests/scenarios/liveness-probe/kustomization.yaml
+++ b/llm_ran/k8s_env/manifests/scenarios/liveness-probe/kustomization.yaml
@@ -11,6 +11,6 @@ patches:
         spec:
           containers:
             - name: server
-              livenessProbe:
+              readinessProbe:
                 grpc:
                   port: 3551
